demo/apple-app/1.deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-app-svc
  namespace: crm
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5678
  selector:
    run: apple-app-demo
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: apple-app-demo
  name: apple-app-deployment
  namespace: crm
spec:
  replicas: 2
  selector:
    matchLabels:
      run: apple-app-demo
  template:
    metadata:
      labels:
        run: apple-app-demo
    spec:
      containers:
      - image: hashicorp/http-echo
        args:
          - "-text=This site is Apple"
        imagePullPolicy: IfNotPresent
        name: http
        ports:
        - containerPort: 5678 # Default port for image
          protocol: TCP
        resources: {}
