demo/apple-app/2.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apple-demo
  namespace: crm
spec:
  ingressClassName: nginx
  rules:
  - host: apple.example.com
    http:
      paths:
      - path: /
        backend:
          service: 
            name: apple-app-svc
            port:
              number: 80
        pathType: ImplementationSpecific
